--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -2,13 +2,14 @@
 @import "index";
 @import "menu";
 @import "header";
+@import url("https://fonts.googleapis.com/css?family=Passion+One:400,700,900&display=swap");
 
 *,
 body,
 html {
   box-sizing: border-box;
-  font-family: sans-serif;
   list-style: none;
+  // font-family: "Josefin Sans", cursive;
   margin: 0;
   padding: 0;
 }
