--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,95 +1,186 @@
 // header {
-//   display: grid;
-//   width: 60%;
-//   grid-template-columns: auto auto;
-//   padding: 20px;
+//   nav {
+//     // display: flex;
+//     // width: 100%;
+//     // justify-content: space-between;
+//     padding: 22px 44px;
 
-//   img {
-//     max-width: 120px;
-//     width: 90px;
-//   }
+//     .menu-btn {
+//       background-color: green;
+//       padding: 6px;
+//       border-radius: 8px;
+//       color: white;
 
-//   .nav-center {
-//     margin-top: 1.6em;
-//     a {
-//       text-decoration: none;
-//       text-transform: uppercase;
-//       font-family: sans-serif;
-//       margin: 0 1.5em;
-//       color: black;
+//       a {
+//         color: white;
+//         text-transform: uppercase;
+//         text-decoration: none;
+//         font-family: sans-serif;
+//         margin: 0 1.5em;
+//       }
+//     }
+
+//     li {
+//       display: inline-block;
+//       vertical-align: middle;
+
+//       a {
+//         margin: 0 10px;
+//         position: relative;
+
+//         &:before {
+//           content: "";
+//           position: absolute;
+//           width: 36px;
+//           height: 36px;
+//           left: 50%;
+//           top: 50%;
+//           transform: translate(-50%, -50%) scale(0);
+//           border-radius: 50%;
+//           opacity: 0.2;
+//           transition: transform 0.25s;
+//         }
+
+//         &.active:before,
+//         &:focus:before,
+//         &:hover:before {
+//           transform: translate(-50%, -50%) scale(1);
+//         }
+//       }
+//     }
+
+//     img {
+//       width: 88px;
+//       height: auto;
+//       align-items: center;
+//       transition: width 0.25s;
+//       margin-right: 50px;
+//     }
+
+//     .item {
+//       a {
+//         text-transform: uppercase;
+//         text-decoration: none;
+//         font-family: sans-serif;
+//         margin: 0 1.5em;
+//         color: black;
+//       }
 //     }
 //   }
 // }
 
-header {
-  nav {
-    display: flex;
-    position: fixed;
-    width: 100%;
-    justify-content: space-between;
-    padding: 22px 44px;
-    align-items: center;
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
+  font-family: "Passion One", cursive;
 
-    .menu-btn {
+  .logo {
+    img {
+      width: 8em;
+    }
+  }
+
+  .nav-links {
+    display: flex;
+    justify-content: space-around;
+    width: 60%;
+    text-transform: uppercase;
+
+    a {
+      color: black;
+      text-decoration: none;
+      letter-spacing: 1px;
+      font-size: 15px;
+    }
+
+    .menu {
       background-color: green;
-      padding: 6px;
+      padding: 8px 35px;
       border-radius: 8px;
       color: white;
-
-      a {
-        color: white;
-        text-transform: uppercase;
-        text-decoration: none;
-        font-family: sans-serif;
-        margin: 0 1.5em;
-      }
     }
+  }
+  .burger {
+    display: none;
+    cursor: pointer;
 
-    li {
-      display: inline-block;
-      vertical-align: middle;
-
-      a {
-        margin: 0 10px;
-        position: relative;
-
-        &:before {
-          content: "";
-          position: absolute;
-          width: 36px;
-          height: 36px;
-          left: 50%;
-          top: 50%;
-          transform: translate(-50%, -50%) scale(0);
-          border-radius: 50%;
-          opacity: 0.2;
-          transition: transform 0.25s;
-        }
-
-        &.active:before,
-        &:focus:before,
-        &:hover:before {
-          transform: translate(-50%, -50%) scale(1);
-        }
-      }
+    div {
+      width: 25px;
+      height: 3px;
+      background-color: #9a2421;
+      margin: 5px;
+      transition: all 0.3s ease;
     }
+  }
+}
 
-    img {
-      width: 88px;
-      height: auto;
+@media screen and (max-width: 1024px) {
+  nav {
+    .nav-links {
+      width: 80%;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+  nav {
+    background-color: #ffbe3b;
+
+    .logo {
+      margin-left: 168.5px;
+      margin-right: auto;
+    }
+    .nav-links {
+      position: absolute;
+      background-color: #ffbe3b;
+      right: 0px;
+      height: 92vh;
+      top: 9vh;
+      display: flex;
+      flex-direction: column;
       align-items: center;
-      transition: width 0.25s;
-      margin-right: 50px;
-    }
+      width: 60%;
+      transform: translateX(100%);
+      transition: transform 0.5s ease-in;
 
-    .item {
-      a {
-        text-transform: uppercase;
-        text-decoration: none;
-        font-family: sans-serif;
-        margin: 0 1.5em;
-        color: black;
+      li {
+        opacity: 0;
       }
     }
+    .nav-active {
+      transform: translateX(0%);
+    }
+    .burger {
+      display: block;
+      margin-right: 2em;
+    }
+
+    .toggle .line1 {
+      transform: rotate(-45deg) translate(-5px, 6px);
+    }
+    .toggle .line2 {
+      opacity: 0;
+    }
+
+    .toggle .line3 {
+      transform: rotate(45deg) translate(-5px, -6px);
+    }
+  }
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0px);
   }
 }
