--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -16,3 +16,13 @@
     left: 0;
   }
 }
+
+@media screen and (max-width: 768px) {
+  #main-content {
+    background: white;
+  }
+
+  :before {
+    display: none;
+  }
+}
