--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -1,8 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=Passion+One:400,700,900&display=swap");
 @import "variables";
 @import "index";
 @import "menu";
 @import "header";
-@import url("https://fonts.googleapis.com/css?family=Passion+One:400,700,900&display=swap");
+@import "homeContent";
 
 *,
 body,
