--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Passion+One:400,700,900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap");
 @import "variables";
 @import "index";
 @import "menu";
