--- a/src/sass/_homeContent.scss
+++ b/src/sass/_homeContent.scss
@@ -95,9 +95,47 @@
     }
   }
   .home-photo {
+    display: flex;
     .home-burger {
       max-width: 1000px;
       width: 590px;
+      padding-top: 35px;
+    }
+    .home-nutrition {
+      display: flex;
+      margin-left: -230px;
+      height: 40%;
+
+      .home-nutrition-card {
+        background-color: white;
+        margin-right: 1em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 5em;
+        padding: 20px 15px;
+        border-top-left-radius: 10%;
+        border-top-right-radius: 10%;
+        border-bottom-left-radius: 45px;
+        border-bottom-right-radius: 20%;
+        font-family: "Poppins", sans-serif;
+        font-size: 0.9em;
+
+        span:first-child {
+          font-weight: bold;
+        }
+
+        span:nth-child(even) {
+          color: #8a8a8a;
+          font-size: 0.7em;
+        }
+        span:last-child {
+          color: #ef4515;
+          font-family: "Passion One", cursive;
+          font-size: 1.3em;
+          font-weight: 600;
+        }
+      }
     }
   }
 }
