add: only adding some style, and make my component responsive

--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -26,9 +26,14 @@
 @media screen and (max-width: 768px) {
   #main-content {
     background: white;
+    height: auto;
   }
 
   :before {
     display: none;
+  }
+
+  #info-content {
+    height: auto;
   }
 }
