--- a/src/sass/_homeContent.scss
+++ b/src/sass/_homeContent.scss
@@ -117,7 +117,7 @@
         border-top-left-radius: 10%;
         border-top-right-radius: 10%;
         border-bottom-left-radius: 45px;
-        border-bottom-right-radius: 20%;
+        border-bottom-right-radius: 10%;
         font-family: "Poppins", sans-serif;
         font-size: 0.9em;
 
@@ -156,7 +156,7 @@
   }
 }
 
-@media only screen and (max-width: 812px) {
+@media only screen and (max-width: 813px) {
   .home-content {
     display: flex;
     flex-direction: column;
@@ -165,15 +165,39 @@
       // flex-direction: column;
       // align-items: center;
       // justify-content: center;
+      .home-title {
+        font-size: 2.9em;
+      }
+      .home-spicy {
+        font-size: 0.9em;
+      }
+      .home-description {
+        font-size: 0.8em;
+      }
       .home-order {
         width: 100%;
       }
     }
 
     .home-photo {
+      // flex-direction: column-reverse;
+
       .home-burger {
         margin-top: 2em;
-        width: 400px;
+        width: 310px;
+        margin-bottom: 2em;
+      }
+
+      .home-nutrition {
+        flex-direction: column;
+        margin-left: -45px;
+        margin-top: 25px;
+
+        .home-nutrition-card {
+          border: 1px solid #ffbe3b;
+          margin-bottom: 1em;
+          font-size: 0.6em;
+        }
       }
     }
   }
