--- a/src/sass/_location_and_franchise.scss
+++ b/src/sass/_location_and_franchise.scss
@@ -8,6 +8,7 @@
   .info-card {
     display: flex;
     // width: 75%;
+    // border: 1px solid red;
     justify-content: space-around;
 
     .info-content {
@@ -51,6 +52,12 @@
         margin-right: 50px;
       }
     }
+  }
+}
+
+@media screen and (min-width: 1624px) {
+  .info-card {
+    width: 43%;
   }
 }
 
