add: added new video component, and style. Not responsive yet

--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -29,6 +29,11 @@
   background-color: #fbf8f2;
 }
 
+#video {
+  height: 95vh;
+  background-color: #0e0c0d;
+}
+
 @media screen and (max-width: 768px) {
   #main-content {
     background: white;
