--- a/src/sass/_ingredients.scss
+++ b/src/sass/_ingredients.scss
@@ -109,6 +109,8 @@
       background-color: black;
       border: none;
       border-radius: 12px;
+      cursor: pointer;
+      outline: none;
     }
   }
 }
