--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -34,6 +34,10 @@
   background-color: #0e0c0d;
 }
 
+#footer {
+  height: 12vh;
+}
+
 @media screen and (max-width: 768px) {
   #main-content {
     background: white;
