--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -2,8 +2,9 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  min-height: 10vh;
+  min-height: 12vh;
   font-family: "Passion One", cursive;
+  background-color: #ffbe3b;
 
   .logo {
     img {
@@ -73,7 +74,7 @@ nav {
       background-color: #ffbe3b;
       right: 0px;
       height: 92vh;
-      top: 9vh;
+      top: 12vh;
       display: flex;
       flex-direction: column;
       align-items: center;
