--- a/src/sass/_homeContent.scss
+++ b/src/sass/_homeContent.scss
@@ -1,9 +1,8 @@
 .home-content {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  width: 75vw;
-  margin: 10vh auto 0 auto;
+  margin: 0px auto;
+  width: 75%;
 
   .home-info {
     .btn-new {
@@ -79,6 +78,7 @@
         font-size: 0.9em;
         border-radius: 15%;
         color: white;
+        border: none;
       }
       span {
         color: #00a950;
@@ -101,12 +101,14 @@
       width: 590px;
       padding-top: 35px;
     }
+
     .home-nutrition {
       display: flex;
       margin-left: -230px;
       height: 40%;
 
       .home-nutrition-card {
+        border: 1px solid #ffbe3b;
         background-color: white;
         margin-right: 1em;
         display: flex;
@@ -138,6 +140,20 @@
       }
     }
   }
+  button {
+    background-color: black;
+    padding: 9px 23px;
+    font-family: "Passion One", cursive;
+    text-transform: uppercase;
+    font-size: 0.9em;
+    border-radius: 15%;
+    color: white;
+    border: none;
+  }
+
+  .only-mobile {
+    display: none;
+  }
 }
 
 // .home-info {
@@ -156,47 +172,74 @@
   }
 }
 
-@media only screen and (max-width: 813px) {
+@media only screen and (max-width: 800px) {
   .home-content {
     display: flex;
     flex-direction: column;
+    width: 85%;
+    margin: 2.5em auto;
     .home-info {
-      // display: flex;
-      // flex-direction: column;
-      // align-items: center;
-      // justify-content: center;
+      display: flex;
+      flex-direction: column;
+
+      .btn-new {
+        display: none;
+      }
+
       .home-title {
         font-size: 2.9em;
       }
       .home-spicy {
-        font-size: 0.9em;
+        font-size: 1.2em;
+        padding-top: 1em;
       }
       .home-description {
-        font-size: 0.8em;
+        font-size: 1.3em;
+        width: 100%;
+      }
+      .home-ingredient {
+        .ingredient-title {
+          font-size: 1.4em;
+          letter-spacing: 0.05em;
+        }
+        .ingredient-list {
+          font-size: 2em;
+        }
       }
       .home-order {
-        width: 100%;
+        display: none;
       }
     }
 
     .home-photo {
-      // flex-direction: column-reverse;
-
       .home-burger {
-        margin-top: 2em;
-        width: 310px;
-        margin-bottom: 2em;
+        width: 100%;
       }
 
       .home-nutrition {
-        flex-direction: column;
-        margin-left: -45px;
-        margin-top: 25px;
+        display: none;
+      }
+    }
+    .only-mobile {
+      display: block;
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: space-around;
+      button {
+        margin-top: 2em;
+        cursor: pointer;
+        outline: none;
+      }
+      span {
+        color: #00a950;
+        font-size: 2em;
+        font-family: "Passion One", cursive;
+        font-weight: 600;
 
-        .home-nutrition-card {
-          border: 1px solid #ffbe3b;
-          margin-bottom: 1em;
-          font-size: 0.6em;
+        &:last-child {
+          color: #aed581;
+          font-size: 0.9em;
+          text-decoration: line-through;
         }
       }
     }
