--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -1,20 +1,8 @@
 #main-content {
-  z-index: 1;
-  height: 105vh;
-  background: #ffbe3b;
-  position: relative;
-
-  :before {
-    z-index: -1;
-    position: absolute;
-    height: 105vh;
-    content: "";
-    right: 35%;
-    background: white;
-    top: 0;
-    bottom: 0;
-    left: 0;
-  }
+  height: 95vh;
+  background: #fff;
+  display: flex;
+  width: 100%;
 }
 
 #info-content {
@@ -38,14 +26,10 @@
   height: 12vh;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 813px) {
   #main-content {
     background: white;
     height: auto;
-  }
-
-  :before {
-    display: none;
   }
 
   #info-content {
