--- a/src/sass/_location_and_franchise.scss
+++ b/src/sass/_location_and_franchise.scss
@@ -29,6 +29,7 @@
         text-transform: uppercase;
         font-family: "Passion One", cursive;
         font-size: 1.1em;
+        border: none;
 
         &:hover {
           outline: none;
