--- a/src/sass/_ingredients.scss
+++ b/src/sass/_ingredients.scss
@@ -114,3 +114,66 @@
     }
   }
 }
+
+@media screen and (max-width: 813px) {
+  .ingredients-section {
+    h1 {
+      font-size: 2.6em;
+      text-align: center;
+      padding-bottom: 20px;
+    }
+    .ingredients-list {
+      flex-direction: column;
+      h3 {
+        font-size: 1.3em;
+        padding: 20px 0;
+      }
+
+      .ingredients-left {
+        width: 100%;
+        flex-direction: row;
+        height: auto;
+        .ingredients-item {
+          padding: 2px 5px;
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+          height: 100%;
+          align-items: center;
+          justify-content: center;
+          ul {
+            font-size: 0.7em;
+            width: 100%;
+          }
+        }
+      }
+      .ingredients-picture {
+        img {
+          width: 100%;
+          padding: 30px 0;
+        }
+      }
+      .ingredients-right {
+        width: 100%;
+        flex-direction: row;
+        height: auto;
+        .ingredients-item {
+          padding: 2px 5px;
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+          height: 100%;
+          align-items: center;
+          justify-content: center;
+          ul {
+            font-size: 0.7em;
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+  .ingredients-comment {
+    padding: 35px 0;
+  }
+}
