--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -146,7 +146,7 @@
       .content {
         margin-left: 2em;
         height: auto;
-        width: 45%;
+        // width: 45%;
         h2 {
           display: flex;
           flex-direction: column;
@@ -243,6 +243,104 @@
         justify-content: center;
         border-radius: 40px;
         margin-top: 3em;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .menu-section {
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+
+    .first-menu-section {
+      display: flex;
+      flex-direction: column;
+
+      .menu-sandwiches {
+        padding: 2em 0;
+        height: auto;
+        .content {
+          margin-left: 1em;
+        }
+
+        .picture {
+          width: 200px;
+        }
+      }
+      .menu-burger {
+        padding: 2em 0;
+        height: auto;
+        .picture {
+          width: 200px;
+        }
+      }
+
+      .menu-salads {
+        padding: 2em 0;
+        height: auto;
+        .content {
+          margin-left: 1em;
+        }
+        .picture {
+          width: 200px;
+        }
+      }
+    }
+    .second-menu-section {
+      display: grid;
+      grid-template-columns: 50% 50%;
+      .menu-kids {
+        .content {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          margin-left: 0;
+
+          h2 {
+            font-size: 2em;
+            width: 100%;
+            text-align: center;
+          }
+          p {
+            width: 100%;
+            text-align: center;
+          }
+        }
+        .picture {
+          display: none;
+        }
+      }
+      .menu-desserts {
+        .content {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          margin-left: 0;
+          h2 {
+            font-size: 2em;
+            width: 100%;
+            text-align: center;
+          }
+
+          p {
+            width: 100%;
+            text-align: center;
+            margin: 3.6em 0;
+          }
+          button {
+            margin-top: 0.1em;
+          }
+        }
+        .picture {
+          display: none;
+        }
+      }
+      .menu-more {
+        display: none;
       }
     }
   }
