--- a/src/sass/_homeContent.scss
+++ b/src/sass/_homeContent.scss
@@ -8,35 +8,36 @@
     flex-direction: column;
     justify-content: center;
     width: 500px;
-    text-align: center;
     font-family: "Passion One", cursive;
 
     .new {
       background-color: #ef4515;
       color: white;
+      display: flex;
+      justify-content: center;
       padding: 6px 5px;
       text-transform: uppercase;
       border-radius: 32%;
       width: 50px;
     }
     h1 {
-      font-size: 4.2em;
-      padding-bottom: 25px;
+      font-size: 65px;
       text-transform: uppercase;
     }
     .home-spicy {
       color: #ee4216;
       display: flex;
       z-index: -999;
-      font-size: 1.3em;
-      justify-content: center;
+      font-size: 22px;
+      justify-content: start;
+      padding-bottom: 10px;
       .not-spicy {
         opacity: 0.4;
       }
 
       span {
-        letter-spacing: 0.1em;
-        margin-left: 1em;
+        letter-spacing: 2px;
+        margin-left: 12px;
       }
     }
     .home-description {
@@ -48,7 +49,7 @@
     .home-ingredient {
       text-transform: uppercase;
       font-family: "Passion One", cursive;
-      text-align: center;
+      text-align: start;
       padding: 30px 0;
 
       h4 {
@@ -60,17 +61,15 @@
 
       .ingredient-list {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         color: #00a950;
         font-size: 25px;
         max-width: 300px;
-        margin-left: auto;
-        margin-right: auto;
       }
     }
     .home-order {
       display: flex;
-      justify-content: center;
+      justify-content: start;
       button {
         background-color: black;
         padding: 9px 23px;
@@ -89,7 +88,6 @@
         color: #00a950;
         font-size: 35px;
         font-family: "Passion One", cursive;
-        font-weight: 600;
 
         &:first-child {
           padding-left: 30px;
@@ -122,14 +120,14 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 5em;
+        width: 70px;
         padding: 20px 15px;
         border-top-left-radius: 10%;
         border-top-right-radius: 10%;
         border-bottom-left-radius: 45px;
         border-bottom-right-radius: 10%;
         font-family: "Poppins", sans-serif;
-        font-size: 0.9em;
+        font-size: 15px;
 
         span:first-child {
           font-weight: bold;
@@ -137,13 +135,12 @@
 
         span:nth-child(even) {
           color: #8a8a8a;
-          font-size: 0.7em;
+          font-size: 12px;
         }
         span:last-child {
           color: #ef4515;
           font-family: "Passion One", cursive;
-          font-size: 1.3em;
-          font-weight: 600;
+          font-size: 18px;
         }
       }
     }
@@ -165,54 +162,54 @@
 }
 
 @media only screen and (min-width: 1624px) {
-  .home-content {
-    width: 70vw;
+  // .home-content {
+  //   // width: 70vw;
 
-    .home-photo {
-      .home-burger {
-        width: 780px;
-      }
-    }
-  }
+  //   .home-photo {
+  //     .home-burger {
+  //       // width: 780px;
+  //     }
+  //   }
+  // }
 }
 
 @media only screen and (max-width: 800px) {
   .home-content {
     flex-direction: column;
+    align-items: center;
     width: 85%;
     margin: 2.5em auto;
     height: auto;
     .home-info {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
+      width: 399px;
       padding-bottom: 15px;
+      align-items: center;
       h1 {
-        font-size: 3em;
-        display: flex;
-        align-items: center;
+        font-size: 45px;
       }
       .home-spicy {
-        font-size: 1.2em;
+        font-size: 20px;
         padding: 0.5em 0;
       }
       .home-description {
-        font-size: 1em;
+        font-size: 18px;
         overflow-y: hidden;
         height: auto;
+        text-align: center;
         width: 100%;
       }
       .home-ingredient {
-        padding-top: 20px;
+        padding-top: 30px;
         display: flex;
         flex-direction: column;
+        align-items: center;
         .ingredient-title {
-          font-size: 1.4em;
-          letter-spacing: 0.05em;
+          font-size: 25px;
+          letter-spacing: 5px;
         }
         .ingredient-list {
           padding-top: 10px;
-          font-size: 1.8em;
+          font-size: 30px;
           width: 250px;
         }
       }
