style: update style of my ingredients component

--- a/src/sass/_ingredients.scss
+++ b/src/sass/_ingredients.scss
@@ -1,84 +1,61 @@
 .ingredients-section {
-  // display: flex;
-  // border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  padding: 60px 50px;
+  background-color: #fbf8f2;
+
   h1 {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+
+    padding-bottom: 30px;
+
     text-transform: uppercase;
     font-family: "Passion One", cursive;
-    font-size: 3.8em;
+    font-size: 60px;
+  }
+  .ingredients-picture {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
+
+    padding: 15px 0px;
   }
 
   .ingredients-list {
-    display: flex;
-    // justify-content: space-around;
-    justify-content: center;
-    align-items: center;
+    padding: 45px 0px;
     h3 {
       font-family: "Passion One", cursive;
-      font-size: 2.2em;
+      font-size: 38px;
       text-transform: uppercase;
       color: #00a652;
     }
 
-    .ingredients-left {
+    .ingredients-information {
       display: flex;
-      height: 40vh;
-      flex-direction: column;
       justify-content: space-around;
-      width: 18vw;
+      flex-wrap: wrap;
+      align-items: center;
 
       .ingredients-item {
         ul {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
           font-family: "Poppins", sans-serif;
-          font-size: 0.7em;
+          font-size: 12px;
           color: #918c85;
         }
         svg {
           color: #a1cf67;
           font-size: 1em;
           margin-right: 1em;
-        }
-        &:last-child {
-          align-self: flex-end;
-        }
-      }
-    }
-
-    .ingredients-right {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      height: 40vh;
-      width: 18vw;
-
-      .ingredients-item {
-        ul {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          font-family: "Poppins", sans-serif;
-          font-size: 0.7em;
-          color: #918c85;
-        }
-        svg {
-          color: #a1cf67;
-          font-size: 1em;
-          margin-right: 1em;
-        }
-        &:first-child {
-          align-self: flex-end;
         }
       }
     }
   }
 
   img {
+    // TODO: delete when i use gatsby image !!
     width: 700px;
   }
 
@@ -91,26 +68,33 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+
+      padding: 20px;
     }
     span {
+      text-transform: uppercase;
+      font-size: 25px;
       font-family: "Passion One", cursive;
       color: #ff8e28;
-      text-transform: uppercase;
-      font-size: 1.1em;
     }
 
     button {
-      margin-top: 2em;
       font-family: "Passion One", cursive;
-      font-size: 1em;
+      font-size: 15px;
       text-transform: uppercase;
       padding: 9px 18px;
       color: white;
       background-color: black;
-      border: none;
       border-radius: 12px;
       cursor: pointer;
       outline: none;
+
+      &:hover {
+        transition: ease-in-out 0.4s;
+        color: black;
+        background-color: white;
+        border: 1px solid black;
+      }
     }
   }
 }
@@ -118,62 +102,44 @@
 @media screen and (max-width: 813px) {
   .ingredients-section {
     h1 {
-      font-size: 2.6em;
+      font-size: 40px;
       text-align: center;
       padding-bottom: 20px;
     }
     .ingredients-list {
-      flex-direction: column;
+      padding: 20px;
       h3 {
-        font-size: 1.3em;
-        padding: 20px 0;
+        text-align: center;
+        font-size: 20px;
       }
 
-      .ingredients-left {
-        width: 100%;
-        flex-direction: row;
-        height: auto;
+      .ingredients-information {
         .ingredients-item {
-          padding: 2px 5px;
-          display: flex;
-          flex-direction: column;
+          border: 2px solid #ff8e28;
+          border-radius: 10px;
+          padding: 8px 0px;
+          margin: 10px 0px;
           width: 100%;
-          height: 100%;
-          align-items: center;
-          justify-content: center;
           ul {
-            font-size: 0.7em;
-            width: 100%;
-          }
-        }
-      }
-      .ingredients-picture {
-        img {
-          width: 100%;
-          padding: 30px 0;
-        }
-      }
-      .ingredients-right {
-        width: 100%;
-        flex-direction: row;
-        height: auto;
-        .ingredients-item {
-          padding: 2px 5px;
-          display: flex;
-          flex-direction: column;
-          width: 100%;
-          height: 100%;
-          align-items: center;
-          justify-content: center;
-          ul {
-            font-size: 0.7em;
-            width: 100%;
+            padding: 10px 25px;
+            font-size: 12px;
           }
         }
       }
     }
-  }
-  .ingredients-comment {
-    padding: 35px 0;
+    .ingredients-comment {
+      // padding: 35px 0;
+      div {
+        padding: 10px;
+      }
+      span {
+        font-size: 18px;
+        // display: none;
+      }
+
+      button {
+        font-size: 12px;
+      }
+    }
   }
 }
