--- a/src/sass/_ingredients.scss
+++ b/src/sass/_ingredients.scss
@@ -18,9 +18,9 @@
     font-size: 60px;
   }
   .ingredients-picture {
-    display: flex;
-    justify-content: center;
+    align-self: center;
 
+    width: 600px;
     padding: 15px 0px;
   }
 
@@ -106,6 +106,11 @@
       text-align: center;
       padding-bottom: 20px;
     }
+    .ingredients-picture {
+      width: 350px;
+      padding: 10px 0px;
+    }
+
     .ingredients-list {
       padding: 20px;
       h3 {
